--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <button id="left">&laquo;</button>
+<button id="left">&laquo;</button>
 <button id="right">&raquo;</button>
 
  
@@ -70,15 +70,56 @@ $( "button" ).click(function() {
     <div><input type="button" value="a²" onclick="pow2()"/></div>    
 </div>   
 </div>
-</div>
- <button id="leftone">&laquo;</button>
+</div> <br>
+<div id="try1">
+<button id="leftone">&laquo;</button>
 <button id="rightone">&raquo;</button>
-
- 
-
 <button id="click">&raquo; Run</button>
-<center><div id="calcul">CONVERTER</div>
-<center><div><input type="text" id="out"/></div>
+</div>
+<center><div id="convert">CONVERTER</div>
+    <div class="secondBlock">
+<div id="supercontainerTwo">
+    <center><div><input type="text" id="out"/></div>
+<div id="containerTwo">
+    <div><input type="button" class="ac" value="AC" onclick="Reset()"/></div>
+    <div><input type="button" value="CE" onclick="removeOne()"/></div>
+    <div><input type="button" value="0" onclick="showValue('0')"/></div>
+    <div><input type="button" value="1" onclick="showValue('1')"/></div>
+    <div><input type="button" value="2" onclick="showValue('2')"/></div>
+    <div><input type="button" value="3" onclick="showValue('3')"/></div>
+    <div><input type="button" value="4" onclick="showValue('4')"/></div>
+    <div><input type="button" value="5" onclick="showValue('5')"/></div>
+    <div><input type="button" value="6" onclick="showValue('6')"/></div>
+    <div><input type="button" value="7" onclick="showValue('7')"/></div>
+    <div><input type="button" value="8" onclick="showValue('8')"/></div>
+    <div><input type="button" value="9" onclick="showValue('9')"/></div>
+
+    </div>
+  </div>
+  </div>  
+     <script>
+    $( "#click" ).click(function() {
+  $( "#convert" ).animate({
+    width: "60%",
+    opacity: 0.4,
+    marginLeft: "0.6in",
+    fontSize: "07em",
+    borderWidth: "10px"
+  }, 1500 );
+});
+
+    $( "#rightone" ).click(function() {
+  $( ".secondBlock" ).animate({ "left": "+=50px" }, "fast" );
+});
+    $( "#leftone" ).click(function(){
+  $( ".secondBlock" ).animate({ "left": "-=50px" }, "slow" );
+});
+$( "button" ).click(function() {
+  $( "p" ).show( "slow" );
+});
+</script>   
+
+
 
 </body>
 </html> 
