--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     
 
 </head>
-
 <body>
 <button id="left">&laquo;</button>
 <button id="right">&raquo;</button>
+<button id="show">Show</button>
+<button id="hide">Hide</button>
 
- 
 
-<button id="push">&raquo; Run</button>
+
 <center><div id="calcul">CALCULATOR</div>
 
   
@@ -56,23 +56,25 @@
 <button id="rightone">&raquo;</button>
 <button id="click">&raquo; Run</button>
 </div>
-<center><div id="convert">CONVERTER</div>
+<center><div id="convert">CONVERTER<br>kg to lbs</div>
     <div class="secondBlock">
 <div id="supercontainerTwo">
     <center><div><input type="text" id="out"/></div>
 <div id="containerTwo">
-    <div><input type="button" class="ac" value="AC" onclick="Reset()"/></div>
-    <div><input type="button" value="CE" onclick="removeOne()"/></div>
-    <div><input type="button" value="0" onclick="showValue('0')"/></div>
-    <div><input type="button" value="1" onclick="showValue('1')"/></div>
-    <div><input type="button" value="2" onclick="showValue('2')"/></div>
-    <div><input type="button" value="3" onclick="showValue('3')"/></div>
-    <div><input type="button" value="4" onclick="showValue('4')"/></div>
-    <div><input type="button" value="5" onclick="showValue('5')"/></div>
-    <div><input type="button" value="6" onclick="showValue('6')"/></div>
-    <div><input type="button" value="7" onclick="showValue('7')"/></div>
-    <div><input type="button" value="8" onclick="showValue('8')"/></div>
-    <div><input type="button" value="9" onclick="showValue('9')"/></div>
+    <div><input type="button" class="ac" value="AC" onclick="Reset1()"/></div>
+    <div><input type="button" value="CE" onclick="remove1()"/></div>
+    <div><input type="button" value="0" onclick="show('0')"/></div>
+    <div><input type="button" value="1" onclick="show('1')"/></div>
+    <div><input type="button" value="2" onclick="show('2')"/></div>
+    <div><input type="button" value="3" onclick="show('3')"/></div>
+    <div><input type="button" value="4" onclick="show('4')"/></div>
+    <div><input type="button" value="5" onclick="show('5')"/></div>
+    <div><input type="button" value="6" onclick="show('6')"/></div>
+    <div><input type="button" value="7" onclick="show('7')"/></div>
+    <div><input type="button" value="8" onclick="show('8')"/></div>
+    <div><input type="button" value="9" onclick="show('9')"/></div>
+    <div><input type="button" value="=" onclick="converter()"/></div>
+
 
     </div>
       </center>
@@ -80,9 +82,18 @@
 </div> 
   <script>
     // this is for the fild slider
-    $( "#push" ).click(function() {
+    $( "#show" ).click(function() {
   $( "#calcul" ).animate({
     width: "60%",
+    opacity: 0.4,
+    marginLeft: "0.6in",
+    fontSize: "07em",
+    borderWidth: "10px"
+  }, 1500 );
+});
+    $( "#hide" ).click(function() {
+  $( "#calcul" ).animate({
+    width: "0%",
     opacity: 0.4,
     marginLeft: "0.6in",
     fontSize: "07em",
